--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,10 @@
     "bootstrap-icons": "^1.13.1",
     "boxicons": "^2.1.4",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
